--- a/config_templates/neofetch.conf
+++ b/config_templates/neofetch.conf
@@ -782,7 +782,7 @@ ascii_distro="Kubuntu"
 #
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
-# ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
+# ascii_colors=(4 255 2 3 5 1) - Kubuntu backup when colors not displayed correctly
 ascii_colors=(distro)
 
 # Bold ascii logo
